; ModuleID = '/home/carl/AnghaBench/git/extr_http.c_append_remote_object_url.c'
source_filename = "/home/carl/AnghaBench/git/extr_http.c_append_remote_object_url.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"objects/%.*s/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @append_remote_object_url(%struct.strbuf* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.strbuf* %0, %struct.strbuf** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @end_url_with_slash(%struct.strbuf* %9, i8* %10)
  %12 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @strbuf_addf(%struct.strbuf* %12, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 2, i8* %13)
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %22, label %17

17:                                               ; preds = %4
  %18 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 2
  %21 = call i32 @strbuf_addstr(%struct.strbuf* %18, i8* %20)
  br label %22

22:                                               ; preds = %17, %4
  ret void
}

declare dso_local i32 @end_url_with_slash(%struct.strbuf*, i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32, i8*) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
